<resources>
    <string name="app_name">GuestApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_all">Todos</string>
    <string name="menu_presents">Presentes</string>
    <string name="menu_absents">Ausentes</string>
    <string name="string_guest_form_name">Nome:</string>
    <string name="string_guest_form_present">Presente</string>
    <string name="string_guest_form_absent">Ausente</string>
    <string name="string_guest_form_confirmation">Confirmação:</string>
    <string name="string_guest_form_save">Salvar</string>
</resources>