<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.guest.GuestFormActivity">

    <TextView
        android:id="@+id/text_guest_form_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/string_guest_form_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_guest_form_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_guest_form_name" />

    <TextView
        android:id="@+id/text_guest_form_present"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/string_guest_form_confirmation"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_guest_form_name"
       />
    <RadioGroup
        android:id="@+id/radiogroup_guest_form_present"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_guest_form_present">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/string_guest_form_present" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/string_guest_form_absent" />

    </RadioGroup>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_guest_form_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/radiogroup_guest_form_present"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/string_guest_form_save"
        />


</androidx.constraintlayout.widget.ConstraintLayout>